# tdl

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
nix/: build.nix  shell.nix
src/tdl/: cmdline.py  display.py  tdl.py  utils.py
src/tdl/backend/: __init__.py  backend_csv.py  backend_sqlite.py  interface_backend.py  models.py
tdl/: cmd_callback.py  cmdline.py  start.py  tdl.py
tdl/backend/: backend_csv.py
