[project]
name = "tdl"
description = "A todolist cli app in python"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE"]
dependencies = ["rich", "arrow"]
requires-python = ">= 3.12"

[project.scripts]
tdl = "tdl.start:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "tdl.__version__" }

[dependency-groups]
dev = []
