[project]
name = "tdl"
description = "A todolist cli app in python"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["rich", "arrow"]
requires-python = ">= 3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Environment :: Console"
]

[project.scripts]
tdl = "tdl.cmdline:start"

[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

# [tool.setuptools.dynamic]
# version = { attr = "tdl.__version__" }

[dependency-groups]
dev = []
